Fixing button visibility

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ footer {
     float: left;
 }
 
-#split, #insurance {
+#hit, #stand, #doubleDown, #split, #insurance, #surrender {
     display: none;
 }
 
